<resources>
    <string name="app_name">pickTrash</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="adminHome">Admin Homepage</string>
    <string name="daftarLaporan">Daftar Laporan</string>
    <string name="onprogress">Sedang Ditangani</string>
    <string name="finish">Selesai Ditangani</string>
    <string name="namaAdmin">Nama Admin</string>
    <string name="namaUser">Nama User</string>
    <string name="deskripsi">Deskripsi Laporan</string>
    <string name="nama">Nama</string>
    <string name="laporan">Laporan</string>
    <string name="nama_hint">Nama</string>
    <string name="deskripsi_hint">Deskripsi</string>
    <string name="register">Register</string>
    <string name="ready">Already Have Account?</string>
    <string name="kirim">Kirim</string>
    <string name="img_splashscreen">Img Splash Screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_laporan">DetailLaporanActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_laporan">LaporanActivity</string>
    <string name="img_user_list">IMG User List</string>
    <string name="nama_alamat">Alamat</string>
</resources>